updated release